<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddProjectFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AddProjectActivity">


        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/between_cards"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginBottom="30dp"
                        android:background="@color/white" />

                    <ImageView
                        android:id="@+id/flesh_back"
                        android:layout_width="73dp"
                        android:layout_height="32dp"

                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="6dp"
                        app:srcCompat="@drawable/back_arrow" />
                    <TextView
                        android:id="@+id/pageTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="65dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/add_project"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="18sp" />
                </RelativeLayout>


                <EditText
                    android:id="@+id/name_project_input"
                    style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:ems="10"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/project_name_hint"
                    android:inputType="textPersonName"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="16sp" />
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="#979797"/>
                <EditText
                    android:id="@+id/desciption_input"
                    style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:ems="10"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="start|top"
                    android:hint="@string/desciption_hint"
                    android:inputType="textMultiLine"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="16sp" />
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="#979797"/>
                <com.google.android.material.textfield.TextInputLayout

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/domain"
                    android:elevation="5dp"
                    android:textColorHint="#574D4D"
                    app:boxBackgroundMode="outline"
                    app:endIconMode="dropdown_menu"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Large">

                    <AutoCompleteTextView
                        android:id="@+id/domain_combo"
                        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"

                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/domain"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="16sp"

                        />

                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/client"

                    android:layout_marginTop="15dp"
                    android:textColorHint="#574D4D"
                    app:boxBackgroundMode="outline"
                    app:endIconMode="dropdown_menu"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Large">

                    <AutoCompleteTextView
                        android:id="@+id/client_combo"
                        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="#00000000"
                        android:drawableStart="@android:drawable/ic_menu_call"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/client"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="16sp" />


                </com.google.android.material.textfield.TextInputLayout>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="#979797"/>

                <com.google.android.material.textfield.TextInputLayout

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/chef_projet"
                    android:elevation="5dp"

                    android:textColorHint="#574D4D"
                    app:boxBackgroundMode="outline"
                    app:endIconMode="dropdown_menu"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Large">

                    <AutoCompleteTextView
                        android:id="@+id/chef_combo"
                        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:background="#00000000"
                        android:drawableStart="@android:drawable/ic_menu_myplaces"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/chef_projet"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="16sp"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/date_debut"
                    android:layout_marginTop="15dp"

                    android:textColorHint="#574D4D"
                    app:boxBackgroundMode="outline"

                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Large">

                    <AutoCompleteTextView
                        android:id="@+id/date_debut"
                        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="57dp"
                        android:layout_marginTop="15dp"
                        android:background="#00000000"
                        android:drawableEnd="@android:drawable/ic_menu_agenda"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/date_debut"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="16sp" />


                </com.google.android.material.textfield.TextInputLayout>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="#979797"/>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/date_fin"

                    android:textColorHint="#574D4D"
                    app:boxBackgroundMode="outline"

                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Large">

                    <AutoCompleteTextView
                        android:id="@+id/date_picker_fin"
                        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="57dp"
                        android:layout_marginTop="25dp"
                        android:background="#00000000"
                        android:drawableEnd="@android:drawable/ic_menu_agenda"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/date_fin"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="#979797"/>

                <EditText
                    android:id="@+id/revenue_input"
                    style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:ems="10"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/revenue_hint"
                    android:inputType="textPersonName"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="16sp"
                    android:elevation="8dp"
                    />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/addbtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/button_bg"
                    android:clickable="true"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/addbtn"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/updatebtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/button_bg"
                    android:clickable="true"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/updatebtn"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:visibility="gone"/>
                </RelativeLayout>


            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</FrameLayout>